--- a/public/index.html
+++ b/public/index.html
@@ -15,12 +15,12 @@
     <h1>Formulario</h1>
     <form action="http://localhost:8080/api/productos" method="POST">
       <div>
-        <label for="nombre">Nombre:</label>
-        <input type="text" placeholder="nombre" name="nombre" required />
+        <label for="title">Nombre:</label>
+        <input type="text" placeholder="nombre" name="title" required />
       </div>
       <div>
-        <label for="precio">Precio:</label>
-        <input type="text" placeholder="precio" name="precio" required />
+        <label for="price">Precio:</label>
+        <input type="text" placeholder="precio" name="price" required />
       </div>
       <div>
         <label for="thumbnail">URL imagen:</label>
